--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -97,15 +97,18 @@ body.trick::before {
 .controls .control{font-size: 1.2em; padding: 0.5em; color: blue}
 .controls .control:hover{color: green}
 
-#mainPicture{position: relative;}
-#mainPicture .controls{position: absolute; justify-content: space-between;top: 0; right: 0;}
+body.figure-edition #mainPicture{position: relative;}
+body.figure-edition #mainPicture .controls_wrapper{position: absolute; top: 0; right: 0;}
+body.figure-edition #mainPicture .controls_wrapper .controls{justify-content: end;}
+body.figure-edition #mainPicture .controls_wrapper .edit{ background-color: #fff; opacity: 0.5; padding: 1em; border-radius: 2px; margin: 1em;}
 
 body.figure-edition #medias .media .controls {justify-content: center;top: 0; right: 0;}
 body.figure-edition textarea{width: 100%; padding: 2em; box-sizing: border-box;}
 body.figure-edition .list.videos .video .edit {display:none}
 body.figure-edition .list.videos .video .edit.visible {display:block}
-body.figure-edition .list.pictures .picture .edit {display:none}
-body.figure-edition .list.pictures .picture .edit.visible {display:block}
+body.figure-edition .picture .edit {display:none}
+body.figure-edition .picture .edit.visible {display:block}
+
 
 /* Page trick create */
 body.figure_creation #medias .media .controls {justify-content: center;top: 0; right: 0;}
