Refactoring Relation between Figure and Main Image

--- a/templates/figure/edit.html.twig
+++ b/templates/figure/edit.html.twig
@@ -19,21 +19,31 @@
 
             <h2 id="mainText">{{ form_row(form.name) }}</h2>
 
-            <div class="controls_wrapper">
-                <div class="controls">
-                    <a href="#" class="control update"><i class="fas fa-pencil-alt"></i></a>
-                    <a href="#" class="control delete"><i class="fas fa-trash-alt"></i></a>
-                </div>
-                <div  class="edit">
-                    {{ form_row(form.mainImage.name) }}
-                    {{ form_row(form.mainImage.filename) }}
-                </div>
+            {% for image in form.images %}
 
-            </div>
+                {% set index = loop.index0 %}
 
-            {% if(figure.mainImage) %}
-                <img src="{{ asset(figure.mainImage.filePath)|imagine_filter('trick_thumbnail') }}" alt="{{ figure.mainImage.name }}">
-            {% endif %}
+                {% if(figure.images[index].isMain) %}
+
+                    {% dump figure.images[index].id %}
+
+                    <div class="controls_wrapper">
+                        <div class="controls">
+                            <a href="#" class="control update"><i class="fas fa-pencil-alt"></i></a>
+                            <a href="#" class="control delete"><i class="fas fa-trash-alt"></i></a>
+                        </div>
+                        <div  class="edit">
+                            {{ form_row(image.name) }}
+                            {{ form_row(image.filename) }}
+                        </div>
+
+                    </div>
+
+                    <img src="{{ asset(figure.images[index].filePath)|imagine_filter('trick_thumbnail') }}" alt="{{ figure.images[index].name }}">
+
+                {% endif %}
+
+            {% endfor %}
 
         </div>
 
@@ -47,25 +57,35 @@
 
                     {% set index = loop.index0 %}
 
-                    <div id="image_{{ index }}" class="media picture">
+                    {% if(not figure.images[index].isMain) %}
 
-                        <div class="inner">
+                        {% dump figure.images[index].id %}
 
-                            <img class="trick_thumbnail" src="{{ asset(figure.images[index].filePath)|imagine_filter('trick_thumbnail') }}"/>
+                        <div id="image_{{ index }}" class="media picture">
 
-                            <div  class="edit">
-                                {{ form_row(image.name) }}
-                                {{ form_row(image.filename) }}
-                            </div>
+                            <div class="inner">
 
-                            <div class="controls">
-                                <a href="#" class="control update"><i class="fas fa-pencil-alt"></i></a>
-                                <a href="#" class="control delete"><i class="fas fa-trash-alt"></i></a>
+                                <img class="trick_thumbnail" src="{{ asset(figure.images[index].filePath)|imagine_filter('trick_thumbnail') }}"/>
+
+                                <div class="controls_wrapper">
+
+                                    <div  class="edit">
+                                        {{ form_row(image.name) }}
+                                        {{ form_row(image.filename) }}
+                                    </div>
+
+                                    <div class="controls">
+                                        <a href="#" class="control update"><i class="fas fa-pencil-alt"></i></a>
+                                        <a href="#" class="control delete"><i class="fas fa-trash-alt"></i></a>
+                                    </div>
+
+                                </div>
+
                             </div>
 
                         </div>
 
-                    </div>
+                    {% endif %}
 
                 {% endfor %}
 
