--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -65,8 +65,8 @@ body.trick::before {
 /* Medias */
 
 #medias .list{display: flex; flex-wrap: wrap; margin: 1em 0;}
-#medias .list .media > * {width: 90%; margin:1em 0}
-#medias .list .media > * > * {width: 100%;}
+#medias .list .media > .inner {width: 90%; margin:1em 0}
+#medias .list .media > .inner > img , #medias .list .media > .inner > iframe  {width: 100%;}
 .video-container > iframe { height: 100%;}
 
 .trick_thumbnail {width:300px; max-height: 168px; overflow: hidden}
@@ -91,29 +91,33 @@ body.trick::before {
 
 
 
-/* Page trick edit */
+/* Page trick edit & trick add */
+#mainPicture { position: relative; }
+#mainPicture .controls_wrapper{position: absolute; top: 0; right: 0;}
+#mainPicture .controls_wrapper .controls{justify-content: end;}
+#mainPicture .controls_wrapper .edit{ opacity: 0.9; margin: 1em; top:3em; right: 0}
 
-.controls{display: flex;}
-.controls .control{font-size: 1.2em; padding: 0.5em; color: blue}
-.controls .control:hover{color: green}
+.controls_wrapper {position: relative}
+.controls_wrapper .controls{display: flex;}
+.controls_wrapper .controls .control{font-size: 1.2em; padding: 0.5em; color: blue}
+.controls_wrapper .controls .control:hover{color: green}
 
-body.figure-edition #mainPicture{position: relative;}
-body.figure-edition #mainPicture .controls_wrapper{position: absolute; top: 0; right: 0;}
-body.figure-edition #mainPicture .controls_wrapper .controls{justify-content: end;}
-body.figure-edition #mainPicture .controls_wrapper .edit{ background-color: #fff; opacity: 0.5; padding: 1em; border-radius: 2px; margin: 1em;}
+.picture .edit {display: none; position: absolute; background-color: #fff; width: max-content; border: 1px solid gray; padding: 1.5em; border-radius: 4px; z-index: 10; top:-8em}
+.picture .edit.visible {display:block}
 
-body.figure-edition #medias .media .controls {justify-content: center;top: 0; right: 0;}
+.list.videos .video .edit {display:none; }
+.list.videos .video .edit.visible {display:block}
+
+/* Page trick edit*/
+
+body.figure-edition #medias .media .controls {justify-content: center;}
 body.figure-edition textarea{width: 100%; padding: 2em; box-sizing: border-box;}
-body.figure-edition .list.videos .video .edit {display:none}
-body.figure-edition .list.videos .video .edit.visible {display:block}
-body.figure-edition .picture .edit {display:none}
-body.figure-edition .picture .edit.visible {display:block}
 
+/* Page trick add */
 
-/* Page trick create */
-body.figure_creation #medias .media .controls {justify-content: center;top: 0; right: 0;}
+body.figure_creation #mainPicture { background-image: linear-gradient(silver,silver); min-height: 600px; }
 body.figure_creation textarea{width: 100%; padding: 2em; box-sizing: border-box;}
-body.figure_creation #mainPicture{ background-image: linear-gradient(silver,silver); min-height: 600px; }
+
 
 
 
