--- a/templates/figure/new.html.twig
+++ b/templates/figure/new.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}New Figure{% endblock %}
 
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('figure_new') }}
+{% endblock %}
+
 {% block body %}
 
     <section id="sheet">
@@ -12,8 +17,14 @@
 
             <h2 id="mainText">{{ form_row(form.name) }}</h2>
 
-            <div class="controls">
-                <a href="#" class="control"><i class="fas fa-plus"></i></a>
+            <div class="controls_wrapper">
+                <div class="controls">
+                    <a href="#" class="control"><i class="fas fa-plus"></i></a>
+                </div>
+                <div  class="edit">
+           {#         {{ form_row(form.mainImage.name) }}
+                    {{ form_row(form.mainImage.filename) }}#}
+                </div>
             </div>
 
         </div>
@@ -22,23 +33,11 @@
 
         <div id="medias">
 
-            <div class="list pictures">
-
-                <div id="" class="media picture">
-
-                    <div class="inner">
-
-                        <img src="https://picsum.photos/300/168" alt="">
-                        <div class="controls">
-                            <a href="#" class="control"><i class="fas fa-pencil-alt"></i></a>
-                            <a href="#" class="control"><i class="fas fa-trash-alt"></i></a>
-                        </div>
-
-                    </div>
-
-                </div>
+            <div class="list pictures" data-prototype="{{ form_widget(form.images.vars.prototype)|e('html_attr') }}">
 
             </div>
+
+            <button type="button" class="add_item_link btn" id="add_image" data-collection-holder-class="images">Ajouter une image</button>
 
             {{ form_label(form.videos) }}
             {{ form_errors(form.videos) }}
