--- a/templates/figure/index.html.twig
+++ b/templates/figure/index.html.twig
@@ -12,7 +12,7 @@
 <section id="container">
 
     {% for message in app.flashes('success') %}
-        <div class="alert alert-success">
+        <div class="alert alert-success" role="alert">
             {{ message }}
         </div>
     {% endfor %}
