--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,15 +7,33 @@
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
+    <div class="login_form mx-auto mt-3 p-3 border border-primary rounded">
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
+        <h1>Créer un compte</h1>
+
+        {{ form_start(registrationForm) }}
+
+            {{ form_label(registrationForm.email) }}
+            {{ form_widget(registrationForm.email, {attr: {class: 'form-control'}}) }}
+            {{ form_errors(registrationForm.email) }}
+
+{#        {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+        }) }}#}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+        <label>Password</label>
+        {{ form_widget(registrationForm.plainPassword, {attr: {class: 'form-control'}}) }}
+        {{ form_errors(registrationForm.plainPassword) }}
+
+        <div class="checkbox mb-3">
+            {{ form_widget(registrationForm.agreeTerms) }}
+            {{ form_label(registrationForm.agreeTerms) }}
+            {{ form_errors(registrationForm.agreeTerms) }}
+        </div>
+
+        <button type="submit" class="btn btn-lg btn-primary" >Register</button>
+        {{ form_end(registrationForm) }}
+
+    </div>
+
 {% endblock %}
