--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
     <header id="header">
 
         <a href="homepage.php" id="logo">
-            <img src="https://picsum.photos/80" alt="">
+            <img src="{{ asset('build/images/logo.png') }}" alt="trick logo">
         </a>
 
         <nav>
