--- a/templates/figure/edit.html.twig
+++ b/templates/figure/edit.html.twig
@@ -15,7 +15,7 @@
 
         <div id="mainPicture" class="picture">
 
-            <h1>Modifie ce trick ! </h1>
+            <h1>Modifies ce trick ! </h1>
 
             <h2 id="mainText">{{ form_row(form.name) }}</h2>
 
